--- a/index.ipynb
+++ b/index.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "This short lesson summarizes key takeaways from section 31"
+    "This short lesson summarizes key takeaways from this section. "
    ]
   },
   {
@@ -61,7 +61,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
