--- a/index.ipynb
+++ b/index.ipynb
@@ -4,32 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Section Recap"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Section Recap\n",
+    "\n",
     "## Introduction\n",
     "\n",
-    "This short lesson summarizes key takeaways from this section. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "This short lesson summarizes key takeaways from this section. \n",
+    "\n",
     "## Objectives\n",
     "You will be able to:\n",
     "* Understand and explain what was covered in this section\n",
-    "* Understand and explain why this section will help you become a data scientist"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "* Understand and explain why this section will help you become a data scientist\n",
+    "\n",
     "## Key Takeaways\n",
     "\n",
     "The key takeaways from this section include:\n",
@@ -61,7 +46,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
